--- a/Fresnel’s Bi-Prism/index.html
+++ b/Fresnel’s Bi-Prism/index.html
@@ -8,13 +8,6 @@
     <script src="js/biprism.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/biprism.css">
-    <script>
-        function main() {
-            $(function() {
-                $("#dialog").dialog();
-            });
-        }
-    </script>
 
     <style>
         table,
@@ -41,9 +34,9 @@
                 <div class="col-xs-8 ml-4">
                     <div><canvas id="myCanvas" style="border: 3px solid rgb(94, 0, 0);;border-radius: 20px;
                     margin: 10px 0 0 10px" width="870" height="430"></canvas>
-                        <img src="img/eyepiece.svg" id="eyeimg" style="display: none;">
-                        <img src="img/lens.svg" id="lensimg" style="display: none;">
-                        <img src="img/line.svg" id="lineimg" style="display: none;">
+                        <img src="image/eyepiece.svg" id="eyeimg" style="display: none;">
+                        <img src="image/lens.svg" id="lensimg" style="display: none;">
+                        <img src="image/line.svg" id="lineimg" style="display: none;">
                     </div>
                 </div>
                 <div class="col-xs-4">
@@ -117,7 +110,7 @@
                         <h6> Use this formula to calculate the distance b/w two virtual sources (2d),</h6>
                     </td>
                     <td style="border: none;">
-                        <h6><img src="img/distf.jpg"></img>
+                        <h6><img src="image/distf.jpg"></img>
                         </h6>
                     </td>
                     <td style="border: none">
@@ -127,7 +120,7 @@
                         <h6> Use this formula to calculate the wavelength of the light (λ),</h6>
                     </td>
                     <td style="border: none;">
-                        <h6><img src="img/formula.jpg"></img>
+                        <h6><img src="image/formula.jpg"></img>
                         </h6>
                     </td>
                 </tr>
